overflow fix for mobile devices

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body{
     border-radius: 20px;
     box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1);
     width: 200px;
-    max-width: min-content;
     text-align: center;
     margin-bottom: 60px;
     overflow: scroll;
@@ -24,7 +23,11 @@ body{
 }
 
 .flashcard{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
     height: 90%;
     position: relative;
     transform-style: preserve-3d;
@@ -40,9 +43,10 @@ body{
 
 .flashcard div{
     display: flex;
+    flex-direction: column;
     position: absolute;
     width: 100%;
-    height: 90%;
+    height: 100%;
     backface-visibility: hidden;
     border-radius: 5px;
     overflow: auto;
@@ -70,9 +74,20 @@ body{
     align-items: center;
     color: #ffffff;
 }
+.flashcard p {
+    font-size: 1rem;
+    width: 100%;
+    min-height: 1rem;
+    overflow-x: none;
+    display: flex;
+    text-wrap: wrap;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 0;
+}
 
 .controls{
-    margin-top: 0px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     gap: 20px;
